--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,8 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
-GOOGLE_MAPS_API_KEY=AIzaSyDPByh0O3ZpAN2p_kphCp6s1nxvjHfW1QA
+android.enableR8 = true
+#GOOGLE_MAPS_API_KEY=AIzaSyDPByh0O3ZpAN2p_kphCp6s1nxvjHfW1QA
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
