--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.8.1'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.26.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.26.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.3.0'
-
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.1.2'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-core:1.1.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.30.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.30.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.5.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
 
     implementation 'com.google.firebase:firebase-core:16.0.7'
