Update 6. Removed unnecessary variables. Saving stations and loading them from SharedPreferences now works. Deleted unnecessary Station class. Icon added for real-time buses. Code simplified. Gradle import updated (firestore).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".Activities.SettingsActivity"
+        <activity
+            android:name=".Activities.SettingsActivity"
             tools:ignore="InnerclassSeparator" />
         <activity
             android:name=".Activities.MainActivity"
