Update 10. Added Service (OnAppExitedHelper.java) to clear user data from firestore when app is closed from recent apps. Real-time bus filtering simplified. UI updated (headerView icon shows current status, MapView from listed bus detail matches style set in settings).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Fragments$ListedBusDetailsFragment" />
-    </application>
+        <activity android:name=".Fragments.ListedBusDetailsFragment"
+            tools:ignore="InnerclassSeparator" />
 
+        <service
+            android:name=".Services.OnAppExitedHelperService"
+            android:enabled="true"
+            android:exported="false"
+            android:stopWithTask="false"
+            tools:ignore="InnerclassSeparator" />
+    </application>
 </manifest>
