--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -33,7 +35,7 @@
             tools:ignore="InnerclassSeparator" />
 
         <service
-            android:name=".Services.OnAppExitedHelperService"
+            android:name=".Services.LocationUpdatesService"
             android:enabled="true"
             android:exported="false"
             android:stopWithTask="false"
