--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.3.2'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-core:1.3.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-core:1.3.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.36.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.30.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.7.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.7.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
 
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-database:17.0.0'
