--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:7.4.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.38.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.38.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v7:0.6.0'
 
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-database:17.0.0'
