--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name=".Activities.SettingsActivity"
+            android:name=".activities.SettingsActivity"
             tools:ignore="InnerclassSeparator" />
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="InnerclassSeparator">
@@ -30,7 +30,7 @@
         </activity>
 
         <service
-            android:name=".Services.LocationUpdatesService"
+            android:name=".services.LocationUpdatesService"
             android:enabled="true"
             android:exported="false"
             android:stopWithTask="false"
